# sswdata

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: download_sdo.yaml
examples/analysis/solar-orbiter/: README.md  repo.sh
examples/compare/: compare_sdo_aia_euv.ipynb  compare_sdo_hmi_continuum.ipynb  compare_sdo_hmi_magnetogram.ipynb  compare_soho_eit.ipynb  compare_stereo_secchi_euvi.ipynb
examples/download/: download.sh  download_sdo_aia_euv.ipynb  download_sdo_hmi.ipynb  download_soho_eit.ipynb  download_stereo_secchi_euvi.ipynb
examples/explore/: explore_sdo_aia_euv.ipynb  explore_sdo_hmi.ipynb  explore_sdo_stereo_solo.ipynb  explore_soho_eit.ipynb  explore_stereo_secchi_euvi.ipynb  explore_stereo_secchi_euvi_sunpy.ipynb
examples/script/: drms_sdo_hmi_magnetogram.ipynb  sunpy_sdo_hmi_magnetogram.ipynb
scripts/: download_sdo.sh  download_sdo_aia_euv.sh
sswdata/: base_sdo_jsoc.py  download_sdo.py  download_sdo_aia_euv.py  download_sdo_hmi.py  download_soho_eit.py  download_stereo_secchi_euvi.py
